# vfs.smb2

./: CMakeLists.txt  FindSMB.cmake
depends/common/smb/: CMakeLists.txt  gss-ntlmssp.txt  krb5.txt  smb.txt
src/: SMBConnection.cpp  SMBConnection.h  SMBFile.cpp  SMBFile.h
vfs.smb2/: addon.xml.in
